--- a/part2/phonebook/src/index.css
+++ b/part2/phonebook/src/index.css
@@ -1,5 +1,5 @@
 body {
-  margin: 0;
+  margin: auto;
   padding-left: 20px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -13,12 +13,23 @@ code {
     monospace;
 }
 
-.error {
+.notification {
+  max-width: 400px;
   color: green;
   background: lightgrey;
   font-size: 20px;
   border-style: solid;
   border-radius: 5px;
-  padding: 30px;
-  margin: 30px;
+  padding: 10px;
+  margin-bottom: 10px;
+}
+
+.error {
+  color: red;
+  background: rgb(252, 250, 250);
+  font-size: 20px;
+  border-style: solid;
+  border-radius: 5px;
+  padding: 10px;
+  margin-bottom: 10px;
 }
